// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageExternal Buttons ButtonContainerFirst shallow renders correctly and button works, with disabled false 1`] = `
<ButtonFirst
  disabled={false}
  handleClick={[Function]}
  heightBuffer={20}
  text="Log In"
  width={300}
/>
`;

exports[`Containers PageExternal Buttons ButtonContainerFirst shallow renders correctly, with disabled true 1`] = `
<ButtonFirst
  disabled={true}
  handleClick={[Function]}
  heightBuffer={20}
  text="Log In"
  width={300}
/>
`;
